[gd_scene load_steps=7 format=2]

[ext_resource path="res://Node2d/Enemies/Spawner_Bug.gd" type="Script" id=1]
[ext_resource path="res://Artwork/Enemies/DropperFlying.png" type="Texture" id=2]
[ext_resource path="res://Node2d/Actors/Actor_baseClass.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 190.902, 139.719 )

[sub_resource type="Animation" id=2]
resource_name = "Ani_Dropper_Default"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 187.377, 138.343 )

[node name="Drooper" type="Node2D" groups=["Enemies"]]
script = ExtResource( 1 )

[node name="Actor_base" type="KinematicBody2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actor_base"]
position = Vector2( 0.21199, 0 )
rotation = -0.00409126
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 6

[node name="BugSpawner" type="Node2D" parent="."]
position = Vector2( -7.43532, 87.9355 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Ani_Dropper_Default"
anims/Ani_Dropper_Default = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 0.972549, 0, 0, 1 )
position = Vector2( 0, -1.41262 )
shape = SubResource( 3 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
